# hisho_agent

./: .env.example  Cargo.toml  README.md
knowledge/: chainlink_education.txt  hisho_agent.txt  hisho_education.txt
src/: lib.rs  main.rs
src/abis/: hisho_nft.json  hisho_staking.json
src/contracts/: contract.rs  erc20.rs  mod.rs  nft.rs  staking.rs  token.rs
src/initialize/: agentic_connection.rs  mod.rs
src/initialize/onchain/: evm_connection.rs  mod.rs
src/processing_agent/: agent.rs
src/singleton/: mod.rs
src/singleton/onchain/: evm_connection.rs
src/tools/: contract.rs  education.rs  events.rs  mod.rs  price.rs  utils.rs
