[package]
name = "hisho_agent"
version = "0.1.0"
edition = "2024"

[dependencies]

# Enviroment dependencies
dotenv-flow = "0.16.2"

# Smart Contract Calling Related Libraries and Tools

ethers = "2.0"
eyre = "0.6.8"
hex = "0.4.3"
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1.0.96"


