[package]
name = "hisho_agent"
version = "0.1.0"
edition = "2024"


[lib]
path = "src/lib.rs"  # Optional (default)

[[bin]]
name = "main"
path = "src/main.rs" # Optional (default)

[profile.dev]
debug = true



[dependencies]

# Enviroment dependencies
dotenv-flow = "0.16.2"

# Smart Contract Calling Related Libraries and Tools
ethers = { version = "2.0", features = ["rustls"] }
eyre = "0.6.8"
hex = "0.4.3"
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }


# Bot Libraries
frankenstein = "0.32.1"

# Scrapper Libraries
scraper = "0.12" 

log = "0.4"
pretty_env_logger = "0.5"
genai = "=0.1.7"

# Api Related Libraries
reqwest = "0.12.16"
dptree = "0.3.0"
regex = "1.11.1"


# Encryption Related data


